Fixed issue with todo title overflow

--- a/style/todo.css
+++ b/style/todo.css
@@ -14,7 +14,7 @@
   flex: auto;
 }
 .todo-item__title{
-  text-overflow: ellipsis;
+  word-break: break-all;
 }
 
 .add-todo__figure, .todo-switch, .todo-switch::before{
